# PyFoundry

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cookiecutter-defaults.json  cookiecutter.json  mkdocs.yml  pyproject.toml
.claude/commands/: fix-issue.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml  docs.yml  release.yml  test-template.yml  test.yml
docs/: index.md
docs/cheatsheets/: devcontainer.md  mkdocs.md
docs/claude/memory/: 251121-1345-integration-mkdocs.md  251121-1504-resolution-404-finalisation-pr.md  260403-1827-docker-in-docker.md
docs/dev/: .nav.yml  .pages  README.md  architecture.md  claude-code.md  contributing.md  deployment.md  documentation_tools.md  qualite_code.md  roadmap.md  testing.md  v0.3-implementation.md
docs/user/: .nav.yml  .pages  README.md  conventions.md  getting_started.md  guide.md  installation.md  structure.md  troubleshooting.md  usage.md  v0.2-features.md  v0.3-features.md
hooks/: post_gen_project.py
mon-projet-data-science/: .cruft.json  README.md  pyproject.toml
mon-projet-data-science/.devcontainer/: devcontainer.json
notebooks/: example.ipynb
tests/: __init__.py  conftest.py  test_configurations.py  test_mkdocs_integration.py  test_template_generation.py
{{ cookiecutter.project_slug }}/: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  docs.yml
{{ cookiecutter.project_slug }}/docs/: index.md
{{ cookiecutter.project_slug }}/docs/cheatsheets/: devcontainer.md  github.md  vscode.md
{{ cookiecutter.project_slug }}/docs/dev/: README.md  documentation_tools.md
{{ cookiecutter.project_slug }}/docs/user/: .nav.yml  README.md
{{ cookiecutter.project_slug }}/scripts/: setup.ps1  setup.sh
