[project]
name = "PyFoundry"
version = "0.4.0-dev"
description = "Template Cookiecutter pour projets Data Science Python"
requires-python = ">=3.11"

dependencies = [
    "cookiecutter",
    "cruft",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cookies",
    "pytest-cov",
]
doc = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "click==8.2.1", # https://github.com/mkdocs/mkdocs/issues/4032
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-awesome-pages-plugin",
    "pymdown-extensions"
]

all = [
    "PyFoundry[test]",
    "PyFoundry[doc]",
]

[tool.setuptools]
packages = []

# Configuration pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=.", "--cov-report=term-missing", "--cov-report=xml"]