[project]
name = "PyFoundry"
version = "0.4.0-dev"
description = "Template Cookiecutter de qualité industrielle pour projets Data Science Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PyFoundry Team"}
]
keywords = ["data-science", "jupyter", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "cookiecutter",
    "cruft",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cookies",
    "pytest-cov",
]
doc = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "click==8.2.1", # https://github.com/mkdocs/mkdocs/issues/4032
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-awesome-pages-plugin",
    "pymdown-extensions"
]

dev = [
    "PyFoundry[test]",
    "PyFoundry[doc]",
    "ruff",
    "mypy",
    "pre-commit",
]

all = [
    "PyFoundry[dev]",
]

[tool.setuptools]
packages = []

# Configuration pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=.", "--cov-report=term-missing", "--cov-report=xml"]


[project.urls]
Homepage = "https://github.com/castorfou/PyFoundry"
Documentation = "https://castorfou.github.io/PyFoundry"
Repository = "https://github.com/castorfou/PyFoundry.git"
Issues = "https://github.com/castorfou/PyFoundry/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


# Configuration Ruff - Linter et formateur Python moderne
[tool.ruff]
# Longueur de ligne (cohérent avec black)
line-length = 88

# Fichiers à exclure
extend-exclude = [
    "data/*",
    "models/*",
    "logs/*",
    ".jupyter/*",
    "[{][{]*",  # Répertoire template Cookiecutter ex: {{ cookiecutter.project_slug }}
]

# Version Python cible
target-version = "py311"

[tool.ruff.lint]
# Règles activées
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ERA",    # eradicate (commented code)
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
]

# Règles ignorées (adaptées Data Science)
ignore = [
    "E501",   # Line too long (black/ruff format s'en occupe)
    "B905",   # zip() sans strict= (Python 3.10+)
    "RET504", # Assign + return -> return direct (parfois moins lisible)
]

[tool.ruff.format]
# Style de formatage
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configuration isort intégrée
known-first-party = ["PyFoundry"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# Convention de nommage adaptée Data Science
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
# Règles spécifiques par type de fichier
"notebooks/*.py" = ["E402", "F401", "F841"]  # Imports, unused vars OK en notebooks
"scripts/*.py" = ["T201"]                    # print() OK dans les scripts
"tests/*.py" = ["S101", "PLR2004"]          # assert OK, magic values OK en tests

# Configuration MyPy - Vérification de types statique
[tool.mypy]
# Version Python et compatibilité
python_version = "3.11"
platform = "linux"

# Niveau de vérification
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Configuration stricte progressive
disallow_any_generics = false        # Autorisé au début
disallow_untyped_calls = false       # Autorisé au début
disallow_untyped_defs = false        # Autorisé au début
disallow_incomplete_defs = true      # Fonctions partiellement typées interdites
disallow_untyped_decorators = false  # Autorisé au début
disallow_subclassing_any = true
no_implicit_reexport = true

# Gestion des imports
ignore_missing_imports = false
follow_imports = "normal"

# Configuration pour Data Science
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "scipy.*",
    "plotly.*",
]
ignore_missing_imports = true

# Configuration spéciale pour notebooks
[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# Configuration tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[tool.cruft]
skip = [
    "{{ cookiecutter.project_slug }}/.devcontainer/resources/.p10k.zsh"
]
