[project]
name = "mon-projet-data-science"
version = "0.1.0"
description = "Description de votre projet de Data Science"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "ipywidgets", 
    "python-dotenv",
    "gitpython"
]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"