[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
license = {text = "MIT"}
authors = [
    {name = "{{ cookiecutter.project_slug }} Team"}
]
keywords = ["data-science", "jupyter", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "ipykernel",
    "ipywidgets", 
    "python-dotenv",
    "gitpython",
    "pandas",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/castorfou/{{ cookiecutter.project_slug }}"
Documentation = "https://github.com/castorfou/{{ cookiecutter.project_slug }}#readme"
Repository = "https://github.com/castorfou/{{ cookiecutter.project_slug }}.git"
Issues = "https://github.com/castorfou/{{ cookiecutter.project_slug }}/issues"

[project.scripts]
{{ cookiecutter.project_slug|replace('-', '_') }}_setup = "scripts.setup:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Configuration uv pour la reproductibilité
[tool.uv]
dev-dependencies = [
    "pytest",
]